k8s/bases/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: stable-diffusion-webui
spec:
  serviceName: stable-diffusion-webui
  replicas: 1
  selector:
    matchLabels:
      app: stable-diffusion-webui
  template:
    metadata:
      labels:
        app: stable-diffusion-webui
    spec:
      containers:
        - name: stable-diffusion-webui
          image: sd-webui
          ports:
            - name: http
              containerPort: 7860
          volumeMounts:
            # NOTE: an ext4 volume has a `lost+found` dir on its root path and causes the app crash (due to the permission), so avoid using root paths (or use xfs, or chmod 777)
            - name: shared-models
              mountPath: /shared-models
              readOnly: true
            - name: shared-embeddings
              mountPath: /shared-embeddings
              readOnly: true
            - name: shared-outputs
              mountPath: /shared-outputs
            - name: configs
              mountPath: /configs
          args:
            - --xformers
            - --api
            - --no-download-sd-model
            - --ui-settings-file=/configs/config.json
            - --ui-config-file=/configs/ui-config.json
            - --ckpt-dir=/shared-models/models/Stable-diffusion
            - --embeddings-dir=/shared-embeddings/embeddings
          livenessProbe:
            httpGet:
              path: /sdapi/v1/progress?skip_current_image=true
              port: 7860
            initialDelaySeconds: 300
            periodSeconds: 10
          resources:
            requests:
              cpu: 1000m
              memory: 10Gi
              nvidia.com/gpu: "1"
            limits:
              cpu: 2000m
              memory: 20Gi
              nvidia.com/gpu: "1"
      volumes:
        - name: shared-models
          persistentVolumeClaim:
            claimName: shared-models
        - name: shared-embeddings
          persistentVolumeClaim:
            claimName: shared-embeddings
        - name: shared-outputs
          persistentVolumeClaim:
            claimName: shared-outputs
  volumeClaimTemplates:
    - metadata:
        name: configs
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 10Mi
