k8s/bases/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: stable-diffusion-webui
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: stable-diffusion-webui
